@@ -1,3 +1,7 @@
+2000-05-14  David O'Brien  <obrien@FreeBSD.org>
+
+	* config/te-freebsd.h: New file.
+
 2000-05-13  Alan Modra  <alan@linuxcare.com.au>
 
 	* asintl.h (gettext, dgettext, dcgettext, textdomain,
